Add orientation lock in manifest file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VendorReviewActivity"></activity>
-        <activity android:name=".TutorialPageTwo" />
-        <activity android:name=".TutorialPageOne" />
-        <activity android:name=".FirstTimeLinkPayment" />
-        <activity android:name=".FourDigitPage" />
-        <activity android:name=".SignupInfoPage" />
-        <activity android:name=".SignupPasswordPage" />
-        <activity android:name=".SignupPage" />
+        <activity
+            android:name=".VendorReviewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape" />
+        <activity android:name=".TutorialPageTwo"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".TutorialPageOne"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".FirstTimeLinkPayment"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".FourDigitPage"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".SignupInfoPage"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".SignupPasswordPage"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape"/>
+        <activity android:name=".SignupPage"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".Splash"
             android:configChanges="keyboardHidden|orientation|screenSize"
